GEOS-7. API, metrics, bugfix
